# Migdal

./: .gitattributes  .gitignore  Migdal.cc
analysis/: Analysis.py  CMakeLists.txt  Migdal Analysis.ipynb  test.C
analysis/graphing/: Coincidence Analysis.ipynb  Collimator Analysis.ipynb  Migdal Analysis.ipynb  RecoilTree.py  Shielding Effectiveness.ipynb  Test_Batch_Graphing.ipynb
analysis/include/: Coincidences.hh  DataStructs.hh  DetectorSurfaceCounts.hh  DetectorSurfaceFlux.hh  ProgressBar.hh  StringHistogram.hh  Timing.hh
analysis/src/: Coincidences.C  DetectorSurfaceCounts.C  DetectorSurfaceFlux.C  EnergyDiscriminate.C  FilterFieldCage.C  StripFluxData.C  analysis.C  test.C
batch_acquisition/: CMakeLists.txt
batch_acquisition/include/: CopyOutputScript.hpp  Macro.hpp  SourceShielding.hpp  ThreadPool.hpp
batch_acquisition/src/: Acquire.cpp
data/: output.root
geant/: CMakeLists.txt  Migdal.cc
geant/data/sourceshielding1/: README  SourceShielding.hpp
geant/data/sourceshielding2/: Basemac  README  SourceShielding.hpp
geant/include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  ProgressBar.hh  RunAction.hh  RunMessenger.hh
geant/macros/: CFSource.mac  DDBeam.mac  Run.mac  Setup.mac
geant/src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  RunAction.cc  SteppingAction.cc
include/: DetectorConstruction.hh  DetectorMessenger.hh  RunAction.hh  SteppingAction.hh
macros/: Setup.mac  Vis.mac
src/: DetectorConstruction.cc  DetectorMessenger.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunMessenger.cc
